# yt-transcript

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.small/: constraints.small.yml  handoff.small.yml  intent.small.yml  plan.small.yml  progress.small.yml  workspace.small.yml
alembic/: env.py
alembic/versions/: 52425d76c6b2_initial_schema.py
docs/: project-status-and-roadmap.md
scripts/: process_queue.sh
src/jcn_transcript/: __init__.py  config.py
src/jcn_transcript/api/: app.py  server.py
src/jcn_transcript/cli/: main.py
src/jcn_transcript/db/: crud.py  tables.py
src/jcn_transcript/lib/: captions.py  errors.py  models.py  normalize.py  pipeline.py  vault.py  ytdlp.py
src/jcn_transcript/workers/: asr_client.py
src/yt_transcript/: __init__.py  config.py
src/yt_transcript/api/: app.py  server.py
src/yt_transcript/cli/: main.py
src/yt_transcript/db/: crud.py  engine.py  tables.py
src/yt_transcript/lib/: errors.py  models.py  normalize.py  notes.py  pipeline.py  url.py  ytdlp.py
tests/: test_api_content.py  test_cli.py  test_config.py  test_db_crud.py  test_health.py  test_normalize.py  test_pipeline.py  test_url.py  test_vault.py  test_vtt_parse.py
