[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript"
version = "0.1.0"
description = "Local-first YouTube transcript ingestion service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2024.0",
    "click>=8.1",
    "pydantic-settings>=2.1",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
]

[project.scripts]
yt-transcript = "yt_transcript.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
